--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "integrates watchify with gulp.js",
   "main": "index.js",
   "scripts": {
+    "prepublish": "./node_modules/.bin/gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +31,10 @@
   },
   "peerDependencies": {
     "watchify": "^0.6.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.6",
+    "gulp-jshint": "^1.7.1",
+    "gulp-plumber": "^0.6.3"
   }
-
 }
