--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "through2": "~0.4.2"
   },
   "peerDependencies": {
-    "watchify": "~0.10.2"
+    "watchify": "^2.2.1",
+    "browserify": "^8.1.0"
   },
   "devDependencies": {
     "brfs": "~1.1.2",
@@ -38,6 +39,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "~0.3.1",
     "gulp-util": "~2.2.20",
-    "watchify": "~0.10.2"
+    "watchify": "^2.2.1",
+    "browserify": "^8.1.0"
   }
 }
