--- a/package.json
+++ b/package.json
@@ -24,22 +24,20 @@
   },
   "homepage": "https://github.com/marcello3d/gulp-watchify",
   "dependencies": {
-    "gulp-util": "^2.2.14",
     "deepmerge": "^0.2.7",
-    "through2": "~0.4.2"
+    "gulp-util": "^3.0.4",
+    "through2": "^0.6.3"
   },
   "peerDependencies": {
-    "watchify": "^2.2.1",
-    "browserify": "^8.1.0"
+    "browserify": "^9.0.3",
+    "watchify": "^2.4.0"
   },
   "devDependencies": {
-    "brfs": "~1.1.2",
-    "exec-sync": "^0.1.6",
-    "gulp": "~3.8.6",
+    "brfs": "^1.4.0",
+    "browserify": "^9.0.3",
+    "gulp": "^3.8.11",
     "gulp-streamify": "0.0.5",
-    "gulp-uglify": "~0.3.1",
-    "gulp-util": "~2.2.20",
-    "watchify": "^2.2.1",
-    "browserify": "^8.1.0"
+    "gulp-uglify": "^1.1.0",
+    "watchify": "^2.3.0"
   }
 }
